<resources>
    <string name="app_name">Guess My Facts</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Sign In With Google</string>
    <string name="title">Guess My Facts!</string>
    <string name="logout_text">Log Out</string>
    <string name="stats">View User Statistics</string>
    <string name="mainMenu">Main Menu</string>
    <string name="title_activity_profile_creation">Profile</string>
    <string name="profile_creation_welcome_message">Welcome! Complete the questionnaire to proceed</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="your_favourite_color">Your favourite color</string>
    <string name="your_favourite_hobby">Your favourite hobby</string>
    <string name="delete_text">Delete Info</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_creation_submit">Submit</string>
    <string name="title_activity_main_game">MainGame</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_stats">Stats</string>
    title_activity_profile_creation
</resources>
